force-app/main/default/objects/ysign__Yousign_Submitted_Document__c/ysign__Yousign_Submitted_Document__c.object-meta.xml
<CustomObject>
    <label>Yousign Submitted Document</label>
    <nameField>
        <displayFormat>YSD-{00000}</displayFormat>
        <label>Yousign Submitted Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Yousign Submitted Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>