force-app/main/default/objects/ysign__Yousign_Submitted_Document__c/fields/ysign__Document_Id__c.field-meta.xml
<CustomField>
    <fullName>ysign__Document_Id__c</fullName>
    <label>Document Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>