force-app/main/default/objects/ysign__Yousign_Submitted_Document__c/fields/ysign__Document_Name__c.field-meta.xml
<CustomField>
    <fullName>ysign__Document_Name__c</fullName>
    <label>Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>