force-app/main/default/objects/ysign__Yousign_Submitted_Document__c/fields/ysign__Document_URL__c.field-meta.xml
<CustomField>
    <fullName>ysign__Document_URL__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + ysign__Document_Id__c  , &apos;Get file&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document URL</label>
    <type>Text</type>
</CustomField>