force-app/main/default/objects/ysign__Yousign_Submitted_Document__c/fields/ysign__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>ysign__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>