force-app/main/default/objects/ysign__Yousign_Submitted_Document__c/fields/ysign__Response__c.field-meta.xml
<CustomField>
    <fullName>ysign__Response__c</fullName>
    <label>Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>