force-app/main/default/objects/ysign__Yousign_Submitted_Document__c/fields/ysign__Type__c.field-meta.xml
<CustomField>
    <fullName>ysign__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>signable</fullName>
            </value>
            <value>
                <fullName>attachment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>