force-app/main/default/objects/ysign__Yousign_Submitted_Document__c/fields/ysign__Yousign_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>ysign__Yousign_Document_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Yousign Document Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>