force-app/main/default/objects/ysign__Yousign_Submitted_Document__c/fields/ysign__Yousign_Procedure__c.field-meta.xml
<CustomField>
    <fullName>ysign__Yousign_Procedure__c</fullName>
    <label>Yousign Procedure</label>
    <referenceTo>ysign__Yousign_Procedure__c</referenceTo>
    <relationshipName>Yousign_Subitted_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>